# rust-elements-consensus

./: Cargo.toml  README.md  dprint.json
elements-consensus-sys/: .gitignore  Cargo.toml  README.md  build.rs  vendor-elements.sh
elements-consensus-sys/depend/: elements-HEAD-revision.txt
elements-consensus-sys/depend/elements/: Makefile.am  configure.ac
elements-consensus-sys/depend/elements/build_msvc/: msvc-autogen.py
elements-consensus-sys/depend/elements/contrib/: valgrind.supp
elements-consensus-sys/depend/elements/doc/: Doxyfile.in
elements-consensus-sys/depend/elements/doc/release-notes/: release-notes-0.16.0.md
elements-consensus-sys/depend/elements/src/: Makefile.am  Makefile.test.include  blind.cpp  blind.h  blindpsbt.cpp  blindpsbt.h  confidential_validation.cpp  confidential_validation.h  core_write.cpp  key.cpp  pegins.cpp  pubkey.cpp
elements-consensus-sys/depend/elements/src/compat/: assumptions.h
elements-consensus-sys/depend/elements/src/primitives/: pak.cpp  pak.h  transaction.cpp
elements-consensus-sys/depend/elements/src/script/: sigcache.cpp  sigcache.h
elements-consensus-sys/depend/elements/src/test/: blind_tests.cpp  denialofservice_tests.cpp
elements-consensus-sys/depend/elements/src/wallet/: rpcwallet.cpp
elements-consensus-sys/depend/elements/test/functional/: wallet_listtransactions.py
elements-consensus-sys/patches/: enable-elements.diff  remove-contrib.diff  remove-doc.diff  remove-secp256k1.diff  remove-share.diff  remove-univalue.diff  trim-elements.diff
elements-consensus-sys/src/: lib.rs
src/: lib.rs
(+110 files in other folders)
