[package]
name = "elements-consensus"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elements-consensus-sys = { path = "./elements-consensus-sys" }
elements = "0.17"

[dev-dependencies]
hex-literal = "0.3"
link-cplusplus = "1"
