[package]
name = "elements-consensus-sys"
version = "0.1.0"
edition = "2018"
links = "elementsconsensus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1-sys = "=0.4.1" # must use `=` because we depend on the symbols :)

[build-dependencies]
autotools = "0.2"
bindgen = "0.58"
